# serverless

./: .gitignore  Rakefile  ReadMe.md  azure-pipelines.yml  database.yml  deploy.ps1  deploy.rs  deploy.yml  deploy_docker.sh  deploy_stack.ps1  deploy_stack.sh  docker-compose.yml  faas-request.yml  functions.yml  log-rpi.yml  presentation.tex  produce.sh  rust-to-mongo.yml  setup_nuc.sh
database/src/: lib.rs
faas-request/: faas-request.yml  handler.js
functions/: database.yml  devices.yml  filter.yml  functions.yml  log-data.yml  log-rpi.yml  openfaas  register-device.yml  ui.yml
functions/database/: Cargo.toml
functions/database/src/: lib.rs
functions/devices/src/: lib.rs
functions/faas-request/: handler.js  package.json
functions/filter/: Cargo.toml
functions/filter/src/: duration_steps.rs  lib.rs
functions/log-data/: Cargo.toml
functions/log-data/src/: lib.rs
functions/log-rpi/: Cargo.toml
functions/log-rpi/src/: lib.rs
functions/register-device/: Cargo.toml
functions/register-device/src/: lib.rs
functions/sensor-request/: handler.js  package-lock.json
functions/template/node/: Dockerfile  index.js  package.json  template.yml
functions/template/rust/: Dockerfile  template.yml
functions/template/rust-http/: .dockerignore  Cargo.toml  Dockerfile  template.yml
functions/template/rust-http/function/: Cargo.toml
functions/template/rust-http/main/: Cargo.toml
functions/template/rust-http/main/src/: main.rs
functions/template/rust-http/openfaas/: Cargo.toml
functions/template/rust-http/openfaas/src/: lib.rs
functions/template/rust-nightly/: Dockerfile  template.yml
functions/template/rust-nightly/function/: Cargo.toml
functions/template/rust-nightly/main/: Cargo.toml
functions/template/static/: Dockerfile  template.yml
functions/template/static-webpack/: Dockerfile  template.yml
functions/template/webpack-static/: Dockerfile  template.yml
functions/tex-pdf/: handler.js  package.json
log-rpi/: Cargo.toml
log-rpi/src/: lib.rs
marko/: .babelrc  .eslintrc.js  index.component.js  index.html  index.js  index.marko  package.json  samples.js  slider.scss  style.scss  webpack.config.babel.js  webpack.config.js
marko/components/: chart.component.js  chart.marko  device-list.marko
marko/components/chart/: chart.component.js  chart.marko  marko-tag.json
marko/components/slider/: slider.component.js  slider.marko
marko/src/: index.component.js  index.marko  slider.scss  style.scss
marko/src/components/chart/: chart.component.js  chart.marko
marko/src/components/datepicker/: datepicker.component.js  datepicker.marko
marko/src/components/device-list/: device-list.marko  marko-tag.json
marko/src/components/slider/: slider.component.js  slider.marko
mobile/SensorData/: .eslintrc.json  App.js  androidView.js  app.json  iosView.js  native.js  package.json  settingsPage.js
mobile/SensorData/android/: build.gradle  settings.gradle
mobile/SensorData/android/app/: BUCK  build.gradle
mobile/SensorData/ios/: AppDelegate.swift  SensorData-Bridging-Header.h  Toast.m  Toast.swift
mobile/SensorData/ios/SensorData/: AppDelegate.m  Info.plist
mobile/SensorData/ios/SensorData.xcodeproj/: project.pbxproj
mobile/SensorData/ios/SensorDataTests/: SensorDataTests.m
mobile/SensorData/native-base-theme/components/: ListItem.js
mobile/SensorData/styles/: grid.js  styles.js  variables.js
mobile/ServerData/: app.json  package.json
mobile/ServerData/android/: settings.gradle
mobile/ServerData/android/app/: BUCK  build.gradle
mobile/ServerData/ios/ServerData/: AppDelegate.m  Info.plist
mobile/ServerData/ios/ServerData.xcodeproj/: project.pbxproj
mobile/ServerData/ios/ServerDataTests/: ServerDataTests.m
mobile/sensor_data/: .gitignore  README.md  pubspec.yaml
mobile/sensor_data/android/app/: build.gradle
mobile/sensor_data/ios/Runner/: AppDelegate.swift  Info.plist  Kafka.swift  Sensors.swift
mobile/sensor_data/ios/Runner.xcodeproj/: project.pbxproj
mobile/sensor_data/lib/: acceleration.dart  cpu_info.dart  device_meta.dart  less_m.dart  list.dart  main.dart  sensors.dart  settings.dart  web_view.dart
mobile/sensor_data/test/: widget_test.dart
presentation/: presentation.tex
rocket_rest/: Cargo.toml  Dockerfile
rocket_rest/src/: main.rs
rpi/: Cargo.toml  ReadMe.md  build  deploy  run-remote  setup_docker.sh  setup_hostname.sh  setup_i2c.sh  setup_openfaas.sh  setup_ruby.sh  setup_timezone.sh  setup_watchdog.sh
rpi/src/: bmp180.rs  main.rs  photoresistor.rs
rust-to-mongo/: Cargo.toml
rust-to-mongo/src/: lib.rs
sensor-request/: handler.js
template/rust/: Dockerfile
template/rust-http/: Dockerfile  template.yml
template/rust-http/function/: Cargo.toml
template/rust-http/function/src/: lib.rs
template/rust-http/main/: Cargo.toml
template/rust-http/main/src/: main.rs
template/rust-http/openfaas/: Cargo.toml
tex/: .latexmkrc  aspell.conf  aspell.en.pws  common.tex  progress.tex
tex-pdf/: handler.js  package.json  serverless.yml
tex-pdf-rs/: Cargo.toml
tex-pdf-rs/src/: main.rs
tex/assets/: architecture-diagram.afdesign  implementation-diagram.afdesign  wiring.afdesign
tex/final-presentation/: architecture.tex  background.tex  final-presentation.tex  functions.tex  implementation.tex  introduction.tex  raspberry-pi.tex  results.tex
tex/initial-presentation/: initial-presentation.tex
tex/mobile/: .latexmkrc  mobile.tex
tex/presentation/: .latexmkrc  presentation.tex
tex/progress/: .latexmkrc
tex/raspberry-pi/: .latexmkrc  Makefile  raspberry-pi.tex
tex/serverless-stack/: .latexmkrc  serverless-stack.tex
tex/thesis/: DPSbachelor.cls  abstract.tex  appendix.tex  legal.tex  preface.tex  thesis.bib  thesis.tex
tex/thesis/chapters/: abstract.tex  architecture.tex  background.tex  conclusion.tex  implementation.tex  introduction.tex  methodology.tex  mobile.tex  motivation.tex  preface.tex  progress.tex  raspberry-pi.tex  results.tex  serverless-stack.tex  ui.tex
ui/: .gitignore  Cargo.toml  ReadMe.md  index.html  index.js  package.json
ui/src/: main.rs
(+56 files in other folders)
