[package]
name = "sensors"
version = "0.1.0"
authors = ["Michael Kaltschmid <kaltschmidmichael@gmail.com>", "Markus Reiter <me@reitermark.us>"]
edition = "2018"

[dependencies]
reqwest = "0.9.11"
systemstat = "0.1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
