[package]
name = "sensors"
version = "0.1.0"
authors = ["Michael Kaltschmid <kaltschmidmichael@gmail.com>", "Markus Reiter <me@reitermark.us>"]
edition = "2018"

[dependencies]
reqwest = "0.9.*"
systemstat = "0.1.*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.*", features = ["serde"] }
i2cdev = "0.4.*"
i2cdev-bmp180 = { version = "0.1.*", git = "https://github.com/martindeegan/i2cdev-sensors" }
i2csensors = "0.1.*"
ads1x1x = "*"
embedded-hal = "*"
linux-embedded-hal = "*"
nb = "*"
