[package]
name = "sensors"
version = "0.1.0"
authors = ["Michael Kaltschmid <kaltschmidmichael@gmail.com>", "Markus Reiter <me@reitermark.us>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.9", features = ["default-tls-vendored"] }
systemstat = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.*", features = ["serde"] }
i2cdev = "0.4.*"
i2cdev-bmp180 = { version = "0.1.*", git = "https://github.com/martindeegan/i2cdev-sensors" }
i2csensors = "0.1.*"
ads1x1x = "*"
am2320 = { git = "https://github.com/reitermarkus/am2320.rs" }
embedded-hal = "*"
linux-embedded-hal = "*"
mac_address = "1"
nb = "*"
