[package]
name = "tex-pdf-rs"
version = "0.1.0"
authors = ["Michael Kaltschmid <kaltschmidmichael@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.48"
tokio = {version= "0.2.11", features = ["macros", "tcp", "dns", "io-util"] }
reqwest = "0.10.2"
zip = "0.5.4"
base64 = "0.11.0"
