[package]
name = "handler"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
http = "*"
lazy_static = "*"
mongodb = "*"
openfaas = { path = "../openfaas" }
serde = "1"
serde_derive = "1"
serde_json = "1"
itertools = "0.6"
