[package]
name = "handler"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
http = "*"
lazy_static = "*"
log = "0.4"
mongodb = "0.9"
bson = { version = "0.14", features = ["u2i"] }
openfaas = { path = "../openfaas" }
serde = "1"
serde_derive = "1"
serde_json = "1"
itertools = "0.6"
