[package]
name = "handler"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[dependencies]
http = "*"
openfaas = { path = "../openfaas" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-preview = "0.3.0-alpha.18"
