[package]
name = "main"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[dependencies]
futures-preview = { version = "0.3.0-alpha.17" }
handler = { path = "../function" }
hyper = { git = "https://github.com/hyperium/hyper", features = ["runtime"] }
tokio = { git = "https://github.com/tokio-rs/tokio" }

[patch."https://github.com/hyperium/hyper"]
hyper = { git = "https://github.com/hyperium/hyper.git", rev = "a543c8eef2046999b54978cfc91be2663b743b23" }

[patch."https://github.com/tokio-rs/tokio"]
tokio = { git = "https://github.com/tokio-rs/tokio.git", rev = "6cbe3d4f82f2c10be108366ece63e1fb180c90b9" }
tokio-executor = { git = "https://github.com/tokio-rs/tokio.git", rev = "6cbe3d4f82f2c10be108366ece63e1fb180c90b9" }
tokio-io = { git = "https://github.com/tokio-rs/tokio.git", rev = "6cbe3d4f82f2c10be108366ece63e1fb180c90b9" }
tokio-reactor = { git = "https://github.com/tokio-rs/tokio.git", rev = "6cbe3d4f82f2c10be108366ece63e1fb180c90b9" }
tokio-sync = { git = "https://github.com/tokio-rs/tokio.git", rev = "6cbe3d4f82f2c10be108366ece63e1fb180c90b9" }
tokio-tcp = { git = "https://github.com/tokio-rs/tokio.git", rev = "6cbe3d4f82f2c10be108366ece63e1fb180c90b9" }
tokio-timer = { git = "https://github.com/tokio-rs/tokio.git", rev = "6cbe3d4f82f2c10be108366ece63e1fb180c90b9" }
tokio-threadpool = { git = "https://github.com/tokio-rs/tokio.git", rev = "6cbe3d4f82f2c10be108366ece63e1fb180c90b9" }
