[package]
name = "main"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[dependencies]
futures-preview = "0.3.0-alpha.17"
handler = { path = "../function" }
hyper = { git = "https://github.com/hyperium/hyper", rev = "7f1b5f52ba3a5fd88582fe813a3a90006c2333b8", features = ["runtime"] }
tokio = "0.2.0-alpha.1"
