[package]
name = "main"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[dependencies]
env_logger = "0.7"
futures-preview = "0.3.0-alpha.19"
handler = { path = "../function" }
hyper = { version = "0.13.0-alpha.4", features = ["runtime", "unstable-stream"] }
tokio = "0.2.0-alpha.6"
